# multisig

./: deploy-mainnet.sh  deploy-testnet.sh  propose-admin.sh
cli/: Cargo.toml
cli/src/: input_keypair.rs  main.rs
keys/: multisig-2.json  multisig-3.json  multisig-4.json  multisig-keypair.json  self_upgrade_multisig-1.json
programs/multisig/src/: lib.rs
res/: multisig.json  testnet-multisig-keypair.json
scripts/: create_self_upgrade_multisig.sh  prepare-mnde-transfer.sh  propose-bin-tx-to-admin.sh  self_upgrade.sh
