[package]
name = "cli"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
anchor-client = "0.11.1"
anchor-lang = "0.11.1"
clap = "3.0.0-beta.2"
multisig = { path = "../programs/multisig" }
borsh = "0.9.1"
serde = "1.0"
serde_json = "1.0"

[[bin]]
path = "src/main.rs"
name = "multisig"
